--- a/notes/cpp.html
+++ b/notes/cpp.html
@@ -139,6 +139,173 @@
                     <li><a href="cpp/0064.html" class="content" target="_blank"> 63 结构体案例2.cpp</a></li>
                 </ul>
             </li>
+            <li>
+                <text style="font-size: 30px;">C++核心</text>
+                <ul>
+                    <li><a href="cpp/0065.html" class="content" target="_blank"> 01 全局区.cpp</a></li>
+                    <li><a href="cpp/0066.html" class="content" target="_blank"> 02 栈区.cpp</a></li>
+                    <li><a href="cpp/0067.html" class="content" target="_blank"> 03 堆区.cpp</a></li>
+                    <li><a href="cpp/0068.html" class="content" target="_blank"> 04 new操作符.cpp</a></li>
+                    <li><a href="cpp/0069.html" class="content" target="_blank"> 05 引用的基本语法.cpp</a></li>
+                    <li><a href="cpp/0070.html" class="content" target="_blank"> 06 引用的注意事项.cpp</a></li>
+                    <li><a href="cpp/0071.html" class="content" target="_blank"> 07 引用做函数参数.cpp</a></li>
+                    <li><a href="cpp/0072.html" class="content" target="_blank"> 08 引用做函数返回值.cpp</a></li>
+                    <li><a href="cpp/0073.html" class="content" target="_blank"> 09 引用的本质.cpp</a></li>
+                    <li><a href="cpp/0074.html" class="content" target="_blank"> 10 常量引用.cpp</a></li>
+                    <li><a href="cpp/0075.html" class="content" target="_blank"> 11 函数默认参数.cpp</a></li>
+                    <li><a href="cpp/0076.html" class="content" target="_blank"> 12 函数占位参数.cpp</a></li>
+                    <li><a href="cpp/0077.html" class="content" target="_blank"> 13 函数重载.cpp</a></li>
+                    <li><a href="cpp/0078.html" class="content" target="_blank"> 14 函数重载-注意事项.cpp</a></li>
+                    <li><a href="cpp/0079.html" class="content" target="_blank"> 15 封装的意义.cpp</a></li>
+                    <li><a href="cpp/0080.html" class="content" target="_blank"> 16 封装实例.cpp</a></li>
+                    <li><a href="cpp/0081.html" class="content" target="_blank"> 17 封装的权限控制.cpp</a></li>
+                    <li><a href="cpp/0082.html" class="content" target="_blank"> 18 struct和class区别.cpp</a></li>
+                    <li><a href="cpp/0083.html" class="content" target="_blank"> 19 成员属性设置为私有.cpp</a></li>
+                    <li><a href="cpp/0084.html" class="content" target="_blank"> 20 封装案例-立方体.cpp</a></li>
+                    <li><a href="cpp/0085.html" class="content" target="_blank"> 21 - 1 封装案例二-点和圆关系.cpp</a></li>
+                    <li><a href="cpp/0086.html" class="content" target="_blank"> 21 - 2 circle.cpp</a></li>
+                    <li><a href="cpp/0087.html" class="content" target="_blank"> 21 - 3 point.cpp</a></li>
+                    <li><a href="cpp/0088.html" class="content" target="_blank"> 22 构造函数和析构函数.cpp</a></li>
+                    <li><a href="cpp/0089.html" class="content" target="_blank"> 23 构造函数的分类及调用.cpp</a></li>
+                    <li><a href="cpp/0090.html" class="content" target="_blank"> 24 拷贝构造函数调用时机.cpp</a></li>
+                    <li><a href="cpp/0091.html" class="content" target="_blank"> 25 构造函数调用规则.cpp</a></li>
+                    <li><a href="cpp/0092.html" class="content" target="_blank"> 26 深拷贝和浅拷贝.cpp</a></li>
+                    <li><a href="cpp/0093.html" class="content" target="_blank"> 27 初始化列表.cpp</a></li>
+                    <li><a href="cpp/0094.html" class="content" target="_blank"> 28 类对象作为类成员.cpp</a></li>
+                    <li><a href="cpp/0095.html" class="content" target="_blank"> 29 静态成员-静态成员变量.cpp</a></li>
+                    <li><a href="cpp/0096.html" class="content" target="_blank"> 30 静态成员-静态成员函数.cpp</a></li>
+                    <li><a href="cpp/0097.html" class="content" target="_blank"> 31 成员变量和成员函数分开存储.cpp</a></li>
+                    <li><a href="cpp/0098.html" class="content" target="_blank"> 32 this指针的使用.cpp</a></li>
+                    <li><a href="cpp/0099.html" class="content" target="_blank"> 33 空指针调用成员函数.cpp</a></li>
+                    <li><a href="cpp/0100.html" class="content" target="_blank"> 34 const修饰成员函数.cpp</a></li>
+                    <li><a href="cpp/0101.html" class="content" target="_blank"> 35 全局函数做友元.cpp</a></li>
+                    <li><a href="cpp/0102.html" class="content" target="_blank"> 36 类做友元.cpp</a></li>
+                    <li><a href="cpp/0103.html" class="content" target="_blank"> 37 成员函数做友元.cpp</a></li>
+                    <li><a href="cpp/0104.html" class="content" target="_blank"> 38 加号运算符重载.cpp</a></li>
+                    <li><a href="cpp/0105.html" class="content" target="_blank"> 39 左移运算符重载.cpp</a></li>
+                    <li><a href="cpp/0106.html" class="content" target="_blank"> 40 递增运算符重载.cpp</a></li>
+                    <li><a href="cpp/0107.html" class="content" target="_blank"> 41 赋值运算符重载.cpp</a></li>
+                    <li><a href="cpp/0108.html" class="content" target="_blank"> 42 关系运算符重载.cpp</a></li>
+                    <li><a href="cpp/0109.html" class="content" target="_blank"> 43 函数调用运算符重载.cpp</a></li>
+                    <li><a href="cpp/0110.html" class="content" target="_blank"> 44 继承的基本语法.cpp</a></li>
+                    <li><a href="cpp/0111.html" class="content" target="_blank"> 45 继承方式.cpp</a></li>
+                    <li><a href="cpp/0112.html" class="content" target="_blank"> 46 继承中的对象模型.cpp</a></li>
+                    <li><a href="cpp/0113.html" class="content" target="_blank"> 47 继承中的构造和析构顺序.cpp</a></li>
+                    <li><a href="cpp/0114.html" class="content" target="_blank"> 48 继承中的同名成员处理.cpp</a></li>
+                    <li><a href="cpp/0115.html" class="content" target="_blank"> 49 继承中的同名静态成员处理方式.cpp</a></li>
+                    <li><a href="cpp/0116.html" class="content" target="_blank"> 50 多继承语法.cpp</a></li>
+                    <li><a href="cpp/0117.html" class="content" target="_blank"> 51 菱形继承.cpp</a></li>
+                    <li><a href="cpp/0118.html" class="content" target="_blank"> 52 多态基本概念.cpp</a></li>
+                    <li><a href="cpp/0119.html" class="content" target="_blank"> 53 多态基本概念剖析.cpp</a></li>
+                    <li><a href="cpp/0120.html" class="content" target="_blank"> 54 多态案例一 - 计算器实现.cpp</a></li>
+                    <li><a href="cpp/0121.html" class="content" target="_blank"> 55 纯虚函数和抽象类.cpp</a></li>
+                    <li><a href="cpp/0122.html" class="content" target="_blank"> 56 多态案例二 - 制作饮品.cpp</a></li>
+                    <li><a href="cpp/0123.html" class="content" target="_blank"> 57 虚析构和纯虚析构.cpp
+                    <li><a href="cpp/0124.html" class="content" target="_blank"> 58 多态案例三 - 电脑组装具体实现.cpp</a></li>
+                    <li><a href="cpp/0125.html" class="content" target="_blank"> 59 文本文件-写文件.cpp</a></li>
+                    <li><a href="cpp/0126.html" class="content" target="_blank"> 60 文本文件-读文件.cpp</a></li>
+                    <li><a href="cpp/0127.html" class="content" target="_blank"> 61 二进制文件 - 写文件.cpp</a></li>
+                    <li><a href="cpp/0128.html" class="content" target="_blank"> 62 二进制文件 - 读文件.cpp</a></li>
+                </ul>
+            </li>
+            <li>
+                <text style="font-size: 30px;">C++提高</text>
+                <ul>
+                    <li><a href="cpp/0129.html" class="content" target="_blank"> 01 函数模板语法.cpp</a></li>
+                    <li><a href="cpp/0130.html" class="content" target="_blank"> 02 函数模板注意事项.cpp</a></li>
+                    <li><a href="cpp/0131.html" class="content" target="_blank"> 03 函数模板案例 - 数组排序.cpp</a></li>
+                    <li><a href="cpp/0132.html" class="content" target="_blank"> 04 普通函数与函数模板区别.cpp</a></li>
+                    <li><a href="cpp/0133.html" class="content" target="_blank"> 05 普通函数与函数模板调用规则.cpp</a></li>
+                    <li><a href="cpp/0134.html" class="content" target="_blank"> 06 模板的局限性.cpp</a></li>
+                    <li><a href="cpp/0135.html" class="content" target="_blank"> 07 类模板语法.cpp</a></li>
+                    <li><a href="cpp/0136.html" class="content" target="_blank"> 08 类模板与函数模板区别.cpp</a></li>
+                    <li><a href="cpp/0137.html" class="content" target="_blank"> 09 类模板中成员函数创建时机.cpp</a></li>
+                    <li><a href="cpp/0138.html" class="content" target="_blank"> 10 类模板对象做函数参数.cpp</a></li>
+                    <li><a href="cpp/0139.html" class="content" target="_blank"> 11 类模板与继承.cpp</a></li>
+                    <li><a href="cpp/0140.html" class="content" target="_blank"> 12 类模板成员函数类外实现.cpp</a></li>
+                    <li><a href="cpp/0141.html" class="content" target="_blank"> 13 - 1 类模板分文件编写.cpp</a></li>
+                    <li><a href="cpp/0142.html" class="content" target="_blank"> 13 - 2 person.cpp</a></li>
+                    <li><a href="cpp/0143.html" class="content" target="_blank"> 14 类模板与友元.cpp</a></li>
+                    <li><a href="cpp/0144.html" class="content" target="_blank"> 15 类模板案例 - 数组类封装.cpp</a></li>
+                    <li><a href="cpp/0145.html" class="content" target="_blank"> 16 STL初识 - vector存放内置数据类型.cpp</a></li>
+                    <li><a href="cpp/0146.html" class="content" target="_blank"> 17 STL初识 - vector存放自定义数据类型.cpp</a></li>
+                    <li><a href="cpp/0147.html" class="content" target="_blank"> 18 STL初识 - 容器嵌套容器.cpp</a></li>
+                    <li><a href="cpp/0148.html" class="content" target="_blank"> 19 string容器 - 构造函数.cpp</a></li>
+                    <li><a href="cpp/0149.html" class="content" target="_blank"> 20 string容器 - 赋值操作.cpp</a></li>
+                    <li><a href="cpp/0150.html" class="content" target="_blank"> 21 string容器 - 字符串拼接.cpp</a></li>
+                    <li><a href="cpp/0151.html" class="content" target="_blank"> 22 string容器 - 字符串查找和替换.cpp</a></li>
+                    <li><a href="cpp/0152.html" class="content" target="_blank"> 23 string容器 - 字符串比较.cpp</a></li>
+                    <li><a href="cpp/0153.html" class="content" target="_blank"> 24 string容器 - 字符存取.cpp</a></li>
+                    <li><a href="cpp/0154.html" class="content" target="_blank"> 25 string容器 - 插入和删除.cpp</a></li>
+                    <li><a href="cpp/0155.html" class="content" target="_blank"> 26 string容器 - 子串.cpp</a></li>
+                    <li><a href="cpp/0156.html" class="content" target="_blank"> 27 vector容器 - 构造函数.cpp</a></li>
+                    <li><a href="cpp/0157.html" class="content" target="_blank"> 28 vector容器 - 赋值操作.cpp</a></li>
+                    <li><a href="cpp/0158.html" class="content" target="_blank"> 29 vector容器 - 容量和大小.cpp</a></li>
+                    <li><a href="cpp/0159.html" class="content" target="_blank"> 30 vector容器 - 插入和删除.cpp</a></li>
+                    <li><a href="cpp/0160.html" class="content" target="_blank"> 31 vector容器 - 数据存取.cpp</a></li>
+                    <li><a href="cpp/0161.html" class="content" target="_blank"> 32 vector容器 - 互换容器.cpp</a></li>
+                    <li><a href="cpp/0162.html" class="content" target="_blank"> 33 vector容器 - 预留空间.cpp</a></li>
+                    <li><a href="cpp/0163.html" class="content" target="_blank"> 34 deque容器 - 构造函数.cpp</a></li>
+                    <li><a href="cpp/0164.html" class="content" target="_blank"> 35 deque容器 - 赋值操作.cpp</a></li>
+                    <li><a href="cpp/0165.html" class="content" target="_blank"> 36 deque容器 - 大小操作.cpp</a></li>
+                    <li><a href="cpp/0166.html" class="content" target="_blank"> 37 deque容器 - 插入和删除.cpp</a></li>
+                    <li><a href="cpp/0167.html" class="content" target="_blank"> 38 deque容器 - 数据存取.cpp</a></li>
+                    <li><a href="cpp/0168.html" class="content" target="_blank"> 39 deque容器 - 排序.cpp</a></li>
+                    <li><a href="cpp/0169.html" class="content" target="_blank"> 40 STL案例 - 评委打分.cpp</a></li>
+                    <li><a href="cpp/0170.html" class="content" target="_blank"> 41 stack容器.cpp</a></li>
+                    <li><a href="cpp/0171.html" class="content" target="_blank"> 42 queue容器.cpp</a></li>
+                    <li><a href="cpp/0172.html" class="content" target="_blank"> 43 list容器 - 构造函数.cpp</a></li>
+                    <li><a href="cpp/0173.html" class="content" target="_blank"> 44 list容器 - 赋值和交换.cpp</a></li>
+                    <li><a href="cpp/0174.html" class="content" target="_blank"> 45 list容器 - 大小操作.cpp</a></li>
+                    <li><a href="cpp/0175.html" class="content" target="_blank"> 46 list容器 - 插入和删除.cpp</a></li>
+                    <li><a href="cpp/0176.html" class="content" target="_blank"> 47 list容器 - 数据存取.cpp</a></li>
+                    <li><a href="cpp/0177.html" class="content" target="_blank"> 48 list容器 - 反转和排序.cpp</a></li>
+                    <li><a href="cpp/0178.html" class="content" target="_blank"> 49 list容器 - 排序案例.cpp</a></li>
+                    <li><a href="cpp/0179.html" class="content" target="_blank"> 50 set容器 - 构造和赋值.cpp</a></li>
+                    <li><a href="cpp/0180.html" class="content" target="_blank"> 51 set容器 - 大小和交换.cpp</a></li>
+                    <li><a href="cpp/0181.html" class="content" target="_blank"> 52 set容器 - 插入和删除.cpp</a></li>
+                    <li><a href="cpp/0182.html" class="content" target="_blank"> 53 set容器 - 查找和统计.cpp</a></li>
+                    <li><a href="cpp/0183.html" class="content" target="_blank"> 54 set容器 - set和multiset区别.cpp</a></li>
+                    <li><a href="cpp/0184.html" class="content" target="_blank"> 55 pair对组 - 对组的创建.cpp</a></li>
+                    <li><a href="cpp/0185.html" class="content" target="_blank"> 56 set容器 - 排序.cpp</a></li>
+                    <li><a href="cpp/0186.html" class="content" target="_blank"> 57 set容器 - 排序(自定义类型).cpp</a></li>
+                    <li><a href="cpp/0187.html" class="content" target="_blank"> 58 map容器 - 构造和赋值.cpp</a></li>
+                    <li><a href="cpp/0188.html" class="content" target="_blank"> 59 map容器 - 大小和交换.cpp</a></li>
+                    <li><a href="cpp/0189.html" class="content" target="_blank"> 60 map容器 - 插入和删除.cpp</a></li>
+                    <li><a href="cpp/0190.html" class="content" target="_blank"> 61 map容器 - 查找和统计.cpp</a></li>
+                    <li><a href="cpp/0191.html" class="content" target="_blank"> 62 map容器 - 排序.cpp</a></li>
+                    <li><a href="cpp/0192.html" class="content" target="_blank"> 63 STL案例 - 员工分组.cpp</a></li>
+                    <li><a href="cpp/0193.html" class="content" target="_blank"> 64 函数对象基本使用.cpp</a></li>
+                    <li><a href="cpp/0194.html" class="content" target="_blank"> 65 谓词 - 一元谓词.cpp</a></li>
+                    <li><a href="cpp/0195.html" class="content" target="_blank"> 66 谓词 - 二元谓词.cpp</a></li>
+                    <li><a href="cpp/0196.html" class="content" target="_blank"> 67 内建函数对象 - 算数仿函数.cpp</a></li>
+                    <li><a href="cpp/0197.html" class="content" target="_blank"> 68 内建函数对象 - 关系仿函数.cpp</a></li>
+                    <li><a href="cpp/0198.html" class="content" target="_blank"> 69 内建函数对象 - 逻辑仿函数.cpp</a></li>
+                    <li><a href="cpp/0199.html" class="content" target="_blank"> 70 常用遍历算法 - for_each.cpp</a></li>
+                    <li><a href="cpp/0200.html" class="content" target="_blank"> 71 常用遍历算法 - transform.cpp</a></li>
+                    <li><a href="cpp/0201.html" class="content" target="_blank"> 72 常用查找算法 - find.cpp</a></li>
+                    <li><a href="cpp/0202.html" class="content" target="_blank"> 73 常用查找算法 - find_if.cpp</a></li>
+                    <li><a href="cpp/0203.html" class="content" target="_blank"> 74 常用查找算法 - adjacent_find.cpp</a></li>
+                    <li><a href="cpp/0204.html" class="content" target="_blank"> 75 常用查找算法 - binary_search.cpp</a></li>
+                    <li><a href="cpp/0205.html" class="content" target="_blank"> 76 常用查找算法 - count.cpp</a></li>
+                    <li><a href="cpp/0206.html" class="content" target="_blank"> 77 常用查找算法 - count_if.cpp</a></li>
+                    <li><a href="cpp/0207.html" class="content" target="_blank"> 78 常用排序算法 - sort.cpp</a></li>
+                    <li><a href="cpp/0208.html" class="content" target="_blank"> 79 常用排序算法 - random_shuffle.cpp</a></li>
+                    <li><a href="cpp/0209.html" class="content" target="_blank"> 80 常用排序算法 - merge.cpp</a></li>
+                    <li><a href="cpp/0210.html" class="content" target="_blank"> 81 常用排序算法 - reverse.cpp</a></li>
+                    <li><a href="cpp/0211.html" class="content" target="_blank"> 82 常用拷贝和替换算法 - copy.cpp</a></li>
+                    <li><a href="cpp/0212.html" class="content" target="_blank"> 83 常用拷贝和替换算法 - replace.cpp</a></li>
+                    <li><a href="cpp/0213.html" class="content" target="_blank"> 84 常用拷贝和替换算法 - replace_if.cpp</a></li>
+                    <li><a href="cpp/0214.html" class="content" target="_blank"> 85 常用拷贝和替换算法 - swap.cpp</a></li>
+                    <li><a href="cpp/0215.html" class="content" target="_blank"> 86 常用算术生成算法 - accumulate.cpp</a></li>
+                    <li><a href="cpp/0216.html" class="content" target="_blank"> 87 常用算术生成算法 - fill.cpp</a></li>
+                    <li><a href="cpp/0217.html" class="content" target="_blank"> 88 常用集合算法 - set_intersection.cpp</a></li>
+                    <li><a href="cpp/0218.html" class="content" target="_blank"> 89 常用集合算法 - set_union.cpp</a></li>
+                    <li><a href="cpp/0219.html" class="content" target="_blank"> 90 常用集合算法 - set_difference.cpp</a></li>
+                    <li><a href="cpp/0220.html" class="content" target="_blank"> MyArray.hpp</a></li>
+                    <li><a href="cpp/0221.html" class="content" target="_blank"> person.hpp</a></li>
+                </ul>
+            </li>
         </ul>
     </body>
 </html>
